# effect-stubs

./: .gitignore  LICENSE  README.md  effect-stubs.cabal  package.yaml  stack.yaml
src/Control/: Effect.hs
src/Control/Effect/: Stub.hs
src/Control/Effect/Class/: Arguments.hs  Console.hs  Environment.hs  FileSystem.hs  Time.hs  Wait.hs
src/Control/Effect/IO/: Arguments.hs  Console.hs  Environment.hs  FileSystem.hs  Time.hs  Wait.hs
src/Control/Effect/Stub/: Arguments.hs  Console.hs  Environment.hs  FileSystem.hs  Monad.hs  Time.hs  Wait.hs
test/Control/Effect/: TestSupport.hs  WaitSpec.hs
test/Control/Monad/: TestSupport.hs
